--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://serenalsx.github.io
 title: Annie's Pug
-subtitle:  Lonely Island
+subtitle:  Trembling Island
 author: Serena
 simple_search: http://google.com/search
 description:
